--- a/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
@@ -234,21 +234,24 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
+                                            @if (ViewBag.Data.DocumentLevel != "Level 4")
+                                            {
                                             <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
                                             <label class="col-lg-7 control-label text-align-left">
                                                 @if (ViewBag.isHistory == false)
                                                 {
                                                     <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
-                                                    <a class="anc2" title="View Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.OriginalVersion, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                                                    <a class="anc2" title="View Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.OriginalVersion, fileName = @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
                                                 }
                                                 else
                                                 {
 
                                                     <a title="View Document" target="_blank" style="text-decoration:underline;" href='@ViewBag.ViewerURL?stage=History&version=@ViewBag.Data.OriginalVersion.ToString().Split('.')[0]&documentid=@ViewBag.Data.DocumentID'>@ViewBag.Data.ReadableDocumentName</a>
-                                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.DraftVersion, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.DraftVersion, fileName = @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
                                                 }
 
                                             </label>
+                                            }
                                         </div>
                                     </div>
                                 </div>
