--- a/DMS-MG/TEPLQMS/Views/ApproveRequest/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Views/ApproveRequest/Index.cshtml
@@ -291,15 +291,23 @@
             $("#DOCFile").removeClass("manfieldredborder"); $("#DOCFile2").removeClass("manfieldredborder");
             var catCode = '';
             catCode = $("#divDocumentCategoryCode").text();
-
+            var DocumentLevel = $("#divDocumentLevel").text();
             //Files Validation
+            var fileUpload2;
             var fileUpload = $("#DOCFile").get(0);
             var files = fileUpload.files;
-            var fileUpload2 = $("#DOCFile2").get(0);
+            if (DocumentLevel != "Level 4")
+            {
+                fileUpload2 = $("#DOCFile2").get(0);
+            }
+            
             var files2;
-            if (fileUpload2 != undefined)
+
+            if (DocumentLevel != "Level 4" && fileUpload2 != undefined)
                 files2 = fileUpload2.files;
-            if (catCode != "FR") {
+           
+
+            if (DocumentLevel != "Level 4") {
                 if ((files.length > 0 && files2.length == 0) || (files.length == 0 && files2.length > 0)) {
                     if (files.length == 0) {
                         $("#DOCFile").addClass("manfieldredborder");
@@ -313,7 +321,8 @@
                     }
                     return false;
                 }
-            }                    
+            }
+            
             
             var fileData = new FormData();
             fileData.append("DocumentID", $("#divDocumentID").text());
@@ -379,7 +388,7 @@
             isExist = 'no';
             //Files - Readable Document            
             var ext2 = ''; var fileSize2 = 0;
-            if (files2 != undefined) {
+            if (DocumentLevel != "Level 4" && files2 != undefined) {
                 if (files2.length > 0) {
                     for (var z = 0; z < files2.length; z++) {
                         ext2 = files2[z].name.substr(files2[z].name.lastIndexOf('.') + 1).toLowerCase();
@@ -389,7 +398,7 @@
                     }
                     //File Type Check
                     //isProceed = IsFileTypeAllowed($("#divReadableFileTypes").text(), ext2);
-                    if (catCode == 'FR')
+                    if (DocumentLevel == "Level 4")
                         isProceed = IsFileTypeAllowed($("#divFormsFileTypes").text(), ext2);
                     else
                         isProceed = IsFileTypeAllowed($("#divReadableFileTypes").text(), ext2);
@@ -467,6 +476,7 @@
             PublishRequest();
             return false;
         });
+        
 
         $("#btnConvertFile").click(function () {
             ConvertToPDF();
