--- a/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
@@ -121,14 +121,14 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-sm-6 col-xs-12">
+                                    @*<div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
                                             <label class="col-lg-4 control-label"><strong>Function</strong></label>
                                             <label class="col-lg-7 control-label text-align-left">
                                                 @ViewBag.Data.FunctionName
                                             </label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
@@ -205,21 +205,24 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
-                                            <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
-                                            <label class="col-lg-7 control-label text-align-left">
+                                            @if (ViewBag.Data.DocumentLevel != "Level 4")
+                                            {
+                                                <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
+                                                <label class="col-lg-7 control-label text-align-left">
                                                 @if (ViewBag.isHistory == false)
                                                 {
                                                     <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
-                                                    <a class="anc2" title="View Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.EditVersion, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                                                    <a class="anc2" title="View Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.EditVersion, fileName = @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
                                                 }
                                                 else
                                                 {
 
                                                     <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/SetHistoryURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.HistoryPath/@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath&docName=@ViewBag.Data.ReadableDocumentName&version=@ViewBag.Data.EditVersion'> @ViewBag.Data.ReadableDocumentName </a>
-                                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.EditVersion, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.EditVersion, fileName = @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
                                                 }
 
                                             </label>
+                                            }
                                         </div>
                                     </div>
                                 </div>
