--- a/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
@@ -141,7 +141,7 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
-                                            <label class="control-label col-lg-4"><strong>Revision</strong></label>
+                                            <label class="control-label col-lg-4"><strong>Version</strong></label>
                                             <label class=" col-lg-7 control-label text-align-left">@ViewBag.Data.OriginalVersion.ToString().Split('.')[0]</label>
                                         </div>
                                     </div>
