--- a/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/HistoryDetails.cshtml
@@ -22,7 +22,7 @@
                                 if (Convert.ToInt32(@ViewBag.Data.DraftVersion.ToString().Split('.')[0].ToString()) > 1)
                                 {
                                     <a id="ancReplaceUser" href="History?ID=@ViewBag.Data.DocumentID" class="btn btn-azure btn-sm">
-                                        <i class="fa fa-history"></i> Revision History
+                                        <i class="fa fa-history"></i> Version History
                                     </a>
                                 }
                     <a href="javascript:DeleteDocument();" class="btn btn-redcolor btn-sm add">
