Priority 2 Bug fixed

--- a/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
@@ -29,7 +29,7 @@
                                             <i class="fa fa-history"></i> Version History
                                         </a>
                                     }
-                                    <a href="javascript:ArchiveDocument();" class="btn btn-redcolor btn-sm add" style="display:none">
+                                    <a href="javascript:ArchiveDocument();" class="btn btn-redcolor btn-sm add" >
                                         <i class="fa fa-remove"></i>Archive Document
                                     </a>
                                 }
