--- a/DMS-Jasmine/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
@@ -75,30 +75,21 @@
                 <div class="form-group">
                     <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
                     <label class="col-lg-7 control-label text-align-left">
-                        <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.DraftFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
+                        
                         @if (ViewBag.DisplayDownload != null && ViewBag.DisplayDownload == true)
                         {
                             // Normal document download link
                             if (ViewBag.Data.IsHistory == false)
-                            {
-                                <a title="Download Document" style="text-decoration:underline;"
-                                   href='@Url.Action("DownloadDocument", "Dashboard",
-                                        new { folderPath = @ViewBag.Data.ReadableFilePath,
-                                               folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder,
-                                               versionNo= @ViewBag.Data.RevisionNo,
-                                               fileName= @ViewBag.Data.ReadableDocumentName })'>
-                                    <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
-                                </a>
-                            }
+                            {                                
+                                @*<a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>*@
+                                <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
+                                <a title="View Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.RevisionNo, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>                            }
                             else
                             {
+                                <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/SetHistoryURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.HistoryPath/@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath&docName=@ViewBag.Data.ReadableDocumentName&version=@ViewBag.Data.RevisionNo'> @ViewBag.Data.ReadableDocumentName </a>
                                 // Link to view the historical document
                                 <a title="Download Document" style="text-decoration:underline;"
-                                   href='@Url.Action("DownloadHistoryDocument", "Dashboard",
-                                            new { folderPath = @ViewBag.Data.ReadableFilePath,
-                                                   folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder,
-                                                   versionNo= @ViewBag.Data.RevisionNo,
-                                                   fileName= @ViewBag.Data.ReadableDocumentName })'>
+                                   href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath,folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.RevisionNo, fileName= @ViewBag.Data.ReadableDocumentName })'>
                                     <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
                                 </a>
                             }
