--- a/DMS-Jasmine/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
@@ -74,45 +74,70 @@
             <div class="col-lg-6 col-sm-6 col-xs-12">
                 <div class="form-group">
                     <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
+                    @*<label class="col-lg-7 control-label text-align-left">
+            <a title="View Document" target="_blank" style="text-decoration:underline;"
+               href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.DraftFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'>
+                @ViewBag.Data.ReadableDocumentName
+            </a>
+            @if (ViewBag.DisplayDownload != null && ViewBag.DisplayDownload == true)
+            {
+
+                // Normal document download link
+                if (ViewBag.Data.IsHistory == false)
+                {
+                    //<a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.DraftFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
+                    <a title="Download Document" style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.RevisionNo, fileName= @ViewBag.Data.ReadableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                }
+                else
+                {
+                    <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/SetHistoryURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.HistoryPath/@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath&docName=@ViewBag.Data.ReadableDocumentName&version=@ViewBag.Data.RevisionNo'> @ViewBag.Data.ReadableDocumentName </a>
+                    // Link to view the historical document
+                    <a title="Download Document" style="text-decoration:underline;"
+                       href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath,folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.RevisionNo, fileName= @ViewBag.Data.ReadableDocumentName })'>
+                        <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
+                    </a>
+                }
+            }
+
+        </label>*@
                     <label class="col-lg-7 control-label text-align-left">
-                        @* Standard view link for normal documents *@
-                        @if (!ViewBag.Data.IsHistory)
+                        @if (ViewBag.Data != null)
                         {
-                            <a title="View Document" target="_blank" style="text-decoration:underline;"
-                               href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.DraftFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'>
-                                @ViewBag.Data.ReadableDocumentName
-                            </a>
-                        }
-                        else
-                        {
-                            @* Link to view the historical document *@
-                            <a title="View Document" target="_blank" style="text-decoration:underline;"
-                               href='~/PDFViewer/SetHistoryURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.HistoryPath/@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath&docName=@ViewBag.Data.ReadableDocumentName&version=@ViewBag.Data.RevisionNo'>
-                                @ViewBag.Data.ReadableDocumentName
-                            </a>
-                        }
+                            // Only show the view link if it's not a historical document
+                            if (!ViewBag.Data.IsHistory)
+                            {
+                                <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath/@ViewBag.Data.ReadableDocumentName'> @ViewBag.Data.ReadableDocumentName </a>
+                            }
 
-                        @* Check if download should be displayed *@
-                        @if (ViewBag.DisplayDownload != null && ViewBag.DisplayDownload == true)
-                        {
-                            @* Link to download the document *@
-                            if (ViewBag.Data.IsHistory)
+                            // Check if download links should be displayed
+                            if (ViewBag.DisplayDownload == true)
                             {
-                                <a title="Download Document" style="text-decoration:underline;"
-                                   href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.RevisionNo, fileName = @ViewBag.Data.ReadableDocumentName })'>
-                                    <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
-                                </a>
+                                if (!ViewBag.Data.IsHistory)
+                                {
+                                    // Normal document download link
+                                    <a title="Download Document" style="text-decoration:underline;"
+                                       href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.RevisionNo, fileName = @ViewBag.Data.ReadableDocumentName })'>
+                                        <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    // Link to view the historical document
+                                    <a title="View Document" target="_blank" style="text-decoration:underline;"
+                                       href='~/PDFViewer/SetHistoryURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.HistoryPath/@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@ViewBag.Data.ReadableFilePath&docName=@ViewBag.Data.ReadableDocumentName&version=@ViewBag.Data.RevisionNo'>
+                                        @ViewBag.Data.ReadableDocumentName
+                                    </a>
+
+                                    // Historical document download link
+                                    <a title="Download Document" style="text-decoration:underline;"
+                                       href='@Url.Action("DownloadHistoryDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.RevisionNo, fileName = @ViewBag.Data.ReadableDocumentName })'>
+                                        <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
+                                    </a>
+                                }
                             }
-                            else
-                            {
-                                <a title="Download Document" style="text-decoration:underline;"
-                                   href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @ViewBag.Data.RevisionNo, fileName = @ViewBag.Data.ReadableDocumentName })'>
-                                    <i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i>
-                                </a>
-                            }
-                        }
+                        }                        
+                        
                     </label>
-
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6 col-xs-12">
