--- a/DMS-MG/TEPLQMS/Views/Request/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/Index.cshtml
@@ -201,7 +201,7 @@
 
                                                     if (@ViewBag.isQMSAdmin == true || ViewBag.Data.DocumentLevel == "Level 4")
                                                     {
-                                                        <a style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.EditableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.DraftFolder, versionNo= @ViewBag.Data.DraftVersion, fileName= @ViewBag.Data.EditableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
+                                                        <a style="text-decoration:underline;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @ViewBag.Data.EditableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo= @ViewBag.Data.DraftVersion, fileName= @ViewBag.Data.EditableDocumentName })'><i class="menu-icon glyphicon glyphicon-download eye-open-font-size"></i></a>
                                                     }
                                                 }
                                             </label>
