1.Not able to edit level 4 documents from dashboard - FIxed 3.After publish, in inbox as a user in readable document field we are getting editable document - Fixed

--- a/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
@@ -302,13 +302,15 @@
         {
 
         }*@
-                                            <div class="form-group" id="divDoc2">
-                                                <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
-                                                <label class="col-lg-7 control-label text-align-left">
-                                                    <input id="DOCFile2" class="form-control manfield" name="DOC2" type="file" value="" title="Readable Document">
-                                                </label>
-                                            </div>
-
+                                            @if (ViewBag.Data.DocumentLevel != "Level 4")
+                                            {
+                                                <div class="form-group" id="divDoc2">
+                                                    <label class="col-lg-4 control-label"><strong>Readable Document</strong></label>
+                                                    <label class="col-lg-7 control-label text-align-left">
+                                                        <input id="DOCFile2" class="form-control manfield" name="DOC2" type="file" value="" title="Readable Document">
+                                                    </label>
+                                                </div>
+                                            }
                                         </div>
                                     </div>
 
@@ -389,9 +391,9 @@
             $("#btnUpdate").show(); $("#btnCancel").show();
             return false;
         });
-        $("#btnUpdate").click(function () {
+        $("#btnUpdate").click(function ()
+        {
 
-            if (ValidateFields())
                 UpdateDocumentDetails();
             return false;
         });
@@ -638,13 +640,16 @@
         function UpdateDocumentDetails() {
             var catCode = '';
             catCode = $("#divCatCode").text();
-
+            var DocumentLevel = $("#divDocumentLevel").text();
             //Files Validation
+            var fileUpload2;
             var fileUpload = $("#DOCFile").get(0);
             var files = fileUpload.files;
-            var fileUpload2 = $("#DOCFile2").get(0);
+            if (DocumentLevel != "Level 4") {
+                fileUpload2 = $("#DOCFile2").get(0);
+            }
             var files2;
-            if (fileUpload2 != undefined)
+            if (DocumentLevel != "Level 4" && fileUpload2 != undefined)
                 files2 = fileUpload2.files;
             //if (catCode == "FR") {
             //    if (files.length == 0) {
@@ -724,7 +729,7 @@
             isExist = 'no';
             //Files - Readable Document            
             var ext2 = ''; var fileSize2 = 0;
-            if (files2 != undefined) {
+            if (DocumentLevel != "Level 4" && files2 != undefined) {
                 if (files2.length > 0) {
                     for (var z = 0; z < files2.length; z++) {
                         ext2 = files2[z].name.substr(files2[z].name.lastIndexOf('.') + 1).toLowerCase();
@@ -732,7 +737,7 @@
                         fileData.append(files2[z].name, files2[z]);
                         isExist = 'yes';
                     }
-                    if (catCode == 'FR')
+                    if (DocumentLevel == "Level 4")
                         isProceed = IsFileTypeAllowed($("#divFormsFileTypes").text(), ext2);
                     else
                         isProceed = IsFileTypeAllowed($("#divReadableFileTypes").text(), ext2);
@@ -807,6 +812,7 @@
             $("#DOCFile").removeClass("manfieldredborder");
             $("#DOCFile2").removeClass("manfieldredborder");
             var catCode = $("#divCatCode").text();
+            var DocumentLevel = $("#divDocumentLevel").text();
             var isValid = true;
             var message = '';
             var version = $("#divOriginalVersion").text().toString().split('.')[0];
@@ -825,10 +831,14 @@
             if (catCode != "FR") {
                 var fileUpload = $("#DOCFile").get(0);
                 var files = fileUpload.files;
-                var fileUpload2 = $("#DOCFile2").get(0);
-                var files2;
-                if (fileUpload2 != undefined)
-                    files2 = fileUpload2.files;
+                if (DocumentLevel != "Level 4")
+                {
+                    var fileUpload2 = $("#DOCFile2").get(0);
+                    var files2;
+                    if (fileUpload2 != undefined)
+                        files2 = fileUpload2.files;
+                }
+                
                 if ((files.length > 0 && files2.length == 0) || (files.length == 0 && files2.length > 0)) {
                     if (files.length == 0) {
                         $("#DOCFile").addClass("manfieldredborder");
