Under Direct Upload Enable Reable upload when its L4 , one bug Fix

--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/DirectUpload/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/DirectUpload/Index.cshtml
@@ -484,16 +484,16 @@
                 $(window).scrollLeft()) + "px");
             return this;
         }
-        $("#ddlDocCategory").change(function () {
-            if ($("#ddlDocCategory option:selected").attr('code') == 'FR') {
-                $("#DOCFile2").removeClass('manfield');
-                $("#divReadbleDoc").hide();
-            }
-            else {
-                $("#DOCFile2").addClass('manfield');
-                $("#divReadbleDoc").show();
-            }
-        });
+        //$("#ddlDocCategory").change(function () {
+        //    if ($("#ddlDocCategory option:selected").attr('code') == 'FR') {
+        //        $("#DOCFile2").removeClass('manfield');
+        //        $("#divReadbleDoc").hide();
+        //    }
+        //    else {
+        //        $("#DOCFile2").addClass('manfield');
+        //        $("#divReadbleDoc").show();
+        //    }
+        //});
         
     </script>
 }
