Small Bug fix (Clearing field After sucess)

--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/DirectUpload/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/DirectUpload/Index.cshtml
@@ -472,7 +472,9 @@
             $("#ddlProject").val(0);
             $("#DocumentNo").val('');
             $("#DOCFile").val('');
+            $("#DOCFile2").val('');
             $("#txtComments").val('');
+            $("#DocumentNo1").val('');
             $("#DocumentDescription").val('');
         }
 
